@@ -14,7 +14,6 @@ GOALS for 0.3 development:
 	- bzr
 	- relocate: http://cygwin.com/ml/cygwin/2006-10/msg00743.html
 	- xfce
-* If fetch fails, rm empty tarball.
 * Fix all FIXMEs
 
 
